# py-gsn-server

./: .env  README.md  env.example  main.py  manage_relayer.py  pyproject.toml  test_local_relayer.py  test_local_relayer_verbose.py  view_registered_relays.py
examples/: polymarket_approvals.py
src/: __init__.py  config.py  encoders.py  relayer.py
src/abis/: __init__.py  proxy_wallet_factory.py  relay_hub.py
src/api/: __init__.py  models.py  server.py
src/py_gsn_relayer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
